Bug 11187 - Mac OS X 10.10.x fails Validate Negotiate Request to 4.1.x
Summary: Mac OS X 10.10.x fails Validate Negotiate Request to 4.1.x
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.1.17
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-31 23:25 UTC by Jeremy Allison
Modified: 2015-04-09 19:25 UTC (History)
4 users (show)

See Also:


Attachments
Wireshark capture trace showing the problem (3.98 MB, application/octet-stream)
2015-03-31 23:25 UTC, Jeremy Allison
no flags Details
git-am fix for 4.1.next. (7.35 KB, patch)
2015-03-31 23:28 UTC, Jeremy Allison
ira: review+
metze: review+
jra: review? (slow)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2015-03-31 23:25:08 UTC
Created attachment 10925 [details]
Wireshark capture trace showing the problem

> Regression: SMB connectivity to Linux server
>
> The server is Ubuntu 14.04.1 running SMB server 4.1.6
>
> Steps to reproduce:
> 1. Install 10.10.x
> 2. Connect to Ubuntu smb share (samba 4.1.6)
> 3. Put machine to sleep and let sleep overnight
> 4. Next morning attempt to connect to another smb share on the same Ubuntu server.
>
> 3/30/15, 5:42 PM Brad Suinn:
> SMB Client does a reconnect which proceeds as
> 1)  Negotiate Request/Response
> 2)  Session Setup Request/Response
> 3)  Tree Connect Request/Response (at this point, the SMB Client thinks that reconnect is finished and worked fine)
> 4)  IOCTL Validate Negotiate Request happens for new share (Share 2) being attempted to be mounted
> 5)  Server sends back a FIN
> 6)  Repeat forever

Wireshark capture trace attached.
Comment 1 Jeremy Allison 2015-03-31 23:28:11 UTC
Created attachment 10926 [details]
git-am fix for 4.1.next.

Back port of the two fixes for this bug that already went into 4.2.0 and above (master).

6221937acac7017dee397d1c9846236d9fd5f613
439de096ae0e1c1b8812fa202f5eba7a891d7a0a
Comment 2 Jeremy Allison 2015-03-31 23:29:19 UTC
Comment on attachment 10926 [details]
git-am fix for 4.1.next.

Adding Ralph as he's the Mac expert (even though he's on vacation this week).
Comment 3 Jeremy Allison 2015-04-01 17:32:17 UTC
Karolin please push to 4.1.next - thanks !
Comment 4 Karolin Seeger 2015-04-08 19:20:15 UTC
(In reply to Jeremy Allison from comment #3)
Pushed to autobuild-v4-1-test.
Comment 5 Karolin Seeger 2015-04-09 19:25:38 UTC
(In reply to Karolin Seeger from comment #4)
Pushed to v4-1-test.
Closing out bug report.

Thanks!