s3: Refactor smbd_smb2_request_process_negprot

Breakout smb2_protocol_dialect_match to support future work in
fsctl_validate_neg_info.

Back port of 6221937acac7017dee397d1c9846236d9fd5f613
written by Ira Cooper <ira@samba.org> and signed off
by Stefan Metzmacher <metze@samba.org>

Fixes bug #11187 - Mac OS X 10.10.x fails Validate Negotiate Request to 4.1.x

https://bugzilla.samba.org/show_bug.cgi?id=11187

Signed-off-by: Jeremy Allison <jra@samba.org>